--- a/miniprogram/pages/work1/index.wxml
+++ b/miniprogram/pages/work1/index.wxml
@@ -3,3 +3,4 @@
 <navigator class="work1" url="/pages/work1/index">work1 任务列表</navigator>
 <navigator class="work2" url="/pages/work2/index">work2 惊喜不惊喜</navigator>
 <navigator class="work3" url="/pages/work3/index">work3 比大小</navigator>
+<navigator class="work4" url="/pages/work4/index">work4 尤克里里</navigator>
