--- a/miniprogram/pages/test/test.wxml
+++ b/miniprogram/pages/test/test.wxml
@@ -1,3 +1,5 @@
 <!--miniprogram/pages/test/test.wxml-->
 <view>{{msg}}</view>
-<view wx:for='{{list}}' wx:key='this'>{{index}}-{{item.name}}</view>
+
+<view bindtap='click' data-id='{{index}}' wx:for='{{list}}' wx:key='this'>{{index}}-{{item.name}}:
+{{item.score.miniapp}}</view>
