--- a/miniprogram/pages/work1/index.wxml
+++ b/miniprogram/pages/work1/index.wxml
@@ -5,3 +5,4 @@
 <navigator class="work3" url="/pages/work3/index">work3 比大小</navigator>
 <navigator class="work4" url="/pages/work4/index">work4 尤克里里</navigator>
 <navigator class="work4" url="/pages/work4 copy/index">work4 尤克里里 copy </navigator>
+<navigator class="work5" url="/pages/work5/index">work5 计算器</navigator>
