--- a/miniprogram/pages/work5/index.wxml
+++ b/miniprogram/pages/work5/index.wxml
@@ -3,8 +3,7 @@
   <view class="screen">
     <view>{{num}}</view>
     <view> {{op}}</view>
-
-    
+    <view></view>
   </view>
   <!-- 键盘 -->
   <view>
