--- a/miniprogram/pages/work5/index.wxml
+++ b/miniprogram/pages/work5/index.wxml
@@ -1,10 +1,10 @@
 <view class="content">
   <!-- 屏幕 -->
   <view class="screen">
-    <view>{{num}}</view>
-    <view> {{op}}</view>
+    <view>　{{num}}</view>
+    <view>　{{op}}</view>
 
-    
+
   </view>
   <!-- 键盘 -->
   <view>
@@ -13,6 +13,12 @@
       <view class="btn orange" bindtap='delete'>del</view>
       <view class="btn orange" bindtap='opbtn' data-val='%'>%</view>
       <view class="btn orange" bindtap='opbtn' data-val='+'>+</view>
+    </view>
+    <view class="btnrow">
+      <view class="btn orange" bindtap="opbtn">平方</view>
+      <view class="btn orange" bindtap="opbtn">开方</view>
+      <view class="btn orange" bindtap="opbtn">sin</view>
+      <view class="btn orange" bindtap="opbtn">cos</view>
     </view>
     <view class="btnrow">
       <view class="btn blue" bindtap='numbtn' data-val="7">7</view>
