--- a/miniprogram/pages/work1/index.wxml
+++ b/miniprogram/pages/work1/index.wxml
@@ -6,3 +6,4 @@
 <navigator class="work4" url="/pages/work4/index">work4 尤克里里</navigator>
 <navigator class="work4" url="/pages/work4 copy/index">work4 尤克里里 copy </navigator>
 <navigator class="work5" url="/pages/work5/index">work5 计算器</navigator>
+<navigator class="work6" open-type="switchTab" url="/pages/work6/property">work6 诉讼费计算</navigator>
