--- a/miniprogram/pages/work6/divorce.wxml
+++ b/miniprogram/pages/work6/divorce.wxml
@@ -1,7 +1,7 @@
 <view class="page">
     <view class="body">
         <form bindsubmit="formsubmit">
-            <switch bindchange="switchchange">是否涉及财产</switch>
+            <switch bindchange="switchchange">是否是外星人</switch>
             <view wx:if="{{condition}}">
                 <text>财产标的金额（单位元）</text>
                 <input type="number" name="property" placeholder="标的金额"/>
