--- a/miniprogram/pages/work8/Index/index.wxml
+++ b/miniprogram/pages/work8/Index/index.wxml
@@ -9,10 +9,10 @@
                         </navigator>
                     </view>
                     <view class="l2">
-                        <text>学院介绍</text>
+                        <text>学院简介</text>
                     </view>
                     <view class="l3">
-                        <navigator url="../case/case">
+                        <navigator url="../map/map">
                             <image class="pic1" src="../images/3.png"></image>
                         </navigator>
                     </view>
@@ -32,10 +32,11 @@
                     <view class="l3" bindtap="phone">
                         <image class="pic1" src="../images/4.png"></image>
                     </view>
+                    <view class="l4">
+                        <text> 联系方式</text>
+                    </view>
                 </view>
-                <view class="l4">
-                    <text> 联系方式</text>
-                </view>
+                
             </view>
         <template is='footer'/>
     </view>
