--- a/miniprogram/pages/work8/map/map.wxml
+++ b/miniprogram/pages/work8/map/map.wxml
@@ -1,2 +1,1 @@
-<!--pages/work8/map/map.wxml-->
-<text>pages/work8/map/map.wxml</text>
+<map id="map" longitude="113.4500" latitude="23.3860" markers="{{markers}}" scale="18" style="width: 100%; height: 300px;"></map>
