--- a/miniprogram/pages/work8/Index/index.wxml
+++ b/miniprogram/pages/work8/Index/index.wxml
@@ -19,6 +19,14 @@
                     <view class="l4">
                         <text>地图导航</text>
                     </view>
+                    <view class="l5">
+                        <navigator url="../leader/leader">
+                            <image class="pic1" src="../images/5.png"></image>
+                        </navigator>
+                    </view>
+                    <view class="l6">
+                        <text>学校领导</text>
+                    </view>
                 </view>
                 <view class="right">
                     <view class="l1">
@@ -34,6 +42,14 @@
                     </view>
                     <view class="l4">
                         <text> 联系方式</text>
+                    </view>
+                    <view class="l1">
+                        <navigator url="../scenery/scenery">
+                            <image class="pic1" src="../images/6.png"></image>
+                        </navigator>
+                    </view>
+                    <view class="l2">
+                        <text>校园风光</text>
                     </view>
                 </view>
             </view>
