--- a/miniprogram/pages/work1/index.wxml
+++ b/miniprogram/pages/work1/index.wxml
@@ -7,3 +7,4 @@
 <navigator class="work4" url="/pages/work4 copy/index">work4 尤克里里 copy </navigator>
 <navigator class="work5" url="/pages/work5/index">work5 计算器</navigator>
 <navigator class="work8" url="/pages/work8/Index/index">work8 机电微官网</navigator>
+<navigator class="work7" url="/pages/work7/index">work7 天气预报</navigator>
