--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -226,7 +226,9 @@ page {
   border: 1px solid black;
 }
 .foot{
-  margin-top: 100%;
+  position: absolute;
+  bottom:0;
+  left: 25%;
   background-color: lightgrey;
   text-align: center;
 }
