--- a/miniprogram/pages/work8/leader/leader.wxss
+++ b/miniprogram/pages/work8/leader/leader.wxss
@@ -1,8 +1,8 @@
-image{
+/* image{
   margin: 0 auto;
   width: 100%;
   height: 100%;
-}
+} */
 .page{
   margin: 0rpx 10rpx 0rpx 10rpx;
 }
@@ -73,9 +73,4 @@ image{
   height: 150rpx;
   border-radius: 50%;
   border: 1px solid black;
-}
-.foot{
-  margin-top: 120%;
-  background-color: lightgrey;
-  text-align: center;
 }
