--- a/miniprogram/pages/work4 copy/index.wxss
+++ b/miniprogram/pages/work4 copy/index.wxss
@@ -1,10 +1,9 @@
 /* miniprogram/pages/work4/index.wxss */
-.body{
+.body1{
   margin: 20rpx;
 }
 .tab{
   display: flex;
-
 }
 .sheet{
   width:100px;
