--- a/miniprogram/pages/work1/index.wxss
+++ b/miniprogram/pages/work1/index.wxss
@@ -5,6 +5,11 @@ navigator{
   border-top: 1px solid rgb(180, 177, 177);
   border-bottom: 1px solid rgb(180, 177, 177);
 }
+text{
+  position: absolute;
+  right: 0;
+  font-size: 70rpx;
+}
 .navigator-hover {
   color:blue;
   background-color: rgb(251, 255, 255);
