--- a/miniprogram/pages/work4 copy/index.wxss
+++ b/miniprogram/pages/work4 copy/index.wxss
@@ -7,11 +7,11 @@
 }
 .sheet{
   width:100px;
+  color: #000;
 background-image: linear-gradient();
 border: 2rpx solid rgba(0,0,0,0.2);
 border-radius: 9rpx;
 text-align: center;
-color: white;
 font-weight: bold;
 }
 .active{
