--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -229,6 +229,6 @@ page {
   position: absolute;
   bottom:0;
   left: 25%;
-  background-color: lightgrey;
+  /* background-color: lightgrey; */
   text-align: center;
 }
