--- a/miniprogram/pages/work7/index.wxml
+++ b/miniprogram/pages/work7/index.wxml
@@ -1,15 +1,18 @@
 <view class="content">
     <view class="search">
         <text>城市编码</text>
-        <input type="number" bindinput="input" placeholder="6位数城市编码" />
+        <input type="number" bindinput="input" placeholder="城市拼音" />
         <icon type="search" bindtap="search"></icon>
     </view>
     <view>
         <view>城市编码为:{{distinct_id}}</view>
         <view>城市:{{city}}</view>
-        <view>气温:{{tmp}}</view>
+        <view>最高气温:{{tmp_max}}</view>
+        <view>最低气温:{{tmp_min}}</view>
         <view>风向:{{wind_dir}}</view>
-        <view>经度:{{longitue}}</view>
-        <view>纬度:{{latiude}}</view>
+        <view>天气情况:{{cond_txt_d}}</view>
+        <view>能见度:{{vis}}km</view>
+        <view>经度:{{longitude}}</view>
+        <view>纬度:{{latitude}}</view>
     </view>
 </view>
