--- a/miniprogram/pages/work7/index.wxml
+++ b/miniprogram/pages/work7/index.wxml
@@ -1,9 +1,25 @@
 <view class="content">
-    <view class="search">
-        <text>城市编码</text>
-        <input type="number" bindinput="input" placeholder="城市拼音" />
-        <icon type="search" bindtap="search"></icon>
+    <view class='bcg' style='background: #0085e5'></view>
+    <image src="images/qing.jpg" class="bcg" mode="aspectFill"></image>
+    <view class='search' style='background:rgba(255, 255, 255, 0)'>
+    <view class='wrapper'>
+      <image src='images/search.png'></image>
+      <input bindinput="input" placeholder-class='placeholderClass' confirm-type='search' placeholder='请输入城市名，快速查询天气信息' maxlength='20' ></input>
+      <icon type='search' bindtap='search'></icon>
     </view>
+  </view>
+  <view class='info'>
+      <view class='city'>
+          <view class='val'>{{location}}</view>
+          <view class='message' style="position: absolute; right: 0;font-size: 30rpx">{{time}}</view>
+      </view>
+      <view class='temp num' decode='true'>{{tmp_max}}<text style='font-size:50rpx;position:relative;top:-20px;'>℃</text></view>
+      <view class='weather'>{{cond_txt_d}}</view>
+      <view class='pm'>
+        <text>能见度 {{vis}}</text>
+      </view>
+    </view>
+
     <view>
         <view>城市编码为:{{distinct_id}}</view>
         <view>城市:{{city}}</view>
