--- a/miniprogram/pages/work7/index.wxss
+++ b/miniprogram/pages/work7/index.wxss
@@ -204,6 +204,8 @@ page {
     font-size: 200rpx;
   }
   .guide .guides {
+    position: relative;
+    top: 0;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -216,8 +218,9 @@ page {
     overflow-x: scroll;
   }
   .guide .title,
-.hourly .title ,
-.livingIndextitle{
+.hourly .title {
+  position: relative;
+  top: 0;
   border-bottom: 1rpx solid rgba(250, 250, 250, .2);
   background: rgba(0, 0, 0, .6);
   font-size: 24rpx;
@@ -230,7 +233,7 @@ page {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  width: 170rpx;
+  width: 200rpx;
   flex-shrink: 0;
 }
 .guide image {
@@ -263,13 +266,41 @@ page {
   line-height: 60rpx;
   text-align: center;
 }
-.details {
+.row1{
+  position: relative;
+  top: 0;
   display: flex;
-  align-items: center;
-  flex-wrap: wrap;
+  flex-direction: block;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding-top: 10rpx;
+  background: rgba(0, 0, 0, .6);
+  margin-bottom: 20rpx;
+  overflow-x: scroll;
+}
+.row2{
+  display: flex;
+  flex-direction: row;
   background:rgba(0, 0, 0, .6);
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+  flex-shrink: 0;
   margin-bottom:20rpx;
   font-size: 24rpx;
+  border: 1px solid #000;
+}
+.details {
+  /* display: flex;
+  flex-direction: column; */
+  justify-content: flex-start;
+  align-items: center;
+  width: 95%;
+  flex-shrink: 0;
+  padding: 1%;
+  margin-bottom:20rpx;
+  font-size: 24rpx;
+  border: 3px solid #fff;
 }
 .hour {
   display: flex;
@@ -287,6 +318,7 @@ page {
 }
 .details .detail,
 .hour .detail {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -306,92 +338,29 @@ page {
 .hour .detail:nth-child(n+9) {
   border-bottom: none;
 }
-.livingIndex {
-  /* border-bottom: 1rpx solid rgba(240, 240, 240, .4); */
-  background: rgba(0, 0, 0, .6);
-  margin-bottom: 20rpx;
+.life{
+    position: relative;
+    top: 0;
+    background: rgba(0, 0, 0, .6);
 }
-.livingIndex .item {
+.life .Sitem{
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: flex-start;
   align-items: center;
   border-bottom: 1rpx solid rgba(250, 250, 250, .2);
   padding: 20rpx 0;
   margin: 0 30rpx;
 }
-.livingIndex .item:last-child {
-  border-bottom: none;
-}
-.livingIndex .item .right {
+.life .Sitem .Sright {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
   flex: 1;
 }
-.livingIndex .item .value {
-  margin-top: 10rpx;
-  font-size: 24rpx;
-}
-.livingIndex .icon {
+.life .Sicon {
   width: 80rpx;
   height: 80rpx;
   padding: 0 24rpx;
-}
-.menus .menu,
-.menus .share {
-  height: 40px;
-  width: 40px;
-  border-radius: 50%;
-  position: fixed;
-  z-index: 100;
-  bottom: 150rpx;
-  right: 70rpx;
-  opacity: 0;
-}
-.menus .share {
-  background: rgba(0, 0, 0, 0);
-}
-.menus .main {
-  opacity: 1;
-}
-/* 打开设置页面 button */
-.openSettingButton {
-  position: fixed;
-  z-index: 102;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(0, 0, 0, .5);
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
-.openSettingButton image {
-  position: relative;
-  width: 128rpx;
-  height: 128rpx;
-  z-index: 2;
-}
-.openSettingButton button {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  opacity: 0;
-  z-index: 3;
-}
-.footer {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  height: 60rpx;
-  font-size: 22rpx;
-  color: #fff;
 }
