--- a/miniprogram/pages/work7/index.wxss
+++ b/miniprogram/pages/work7/index.wxss
@@ -223,7 +223,7 @@ page {
   top: 0;
   border-bottom: 1rpx solid rgba(250, 250, 250, .2);
   background: rgba(0, 0, 0, .6);
-  font-size: 24rpx;
+  font-size: 30rpx;
   height: 80rpx;
   line-height: 80rpx;
   text-align: center;
@@ -363,4 +363,20 @@ page {
   width: 80rpx;
   height: 80rpx;
   padding: 0 24rpx;
+}
+.Skey{
+  font-weight: bold;
+}
+.Stext{
+    font-size:30rpx;
+    font-weight: bold;
+    background: linear-gradient(to right, #1ae8c8, #4a8aff);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+}
+.tmpButton{
+  color: #fff;
+  border: 1px double #1ae8c8;
+  background-color: rgba(0, 0, 0, .6);
 }
