--- a/miniprogram/pages/work1/index.wxml
+++ b/miniprogram/pages/work1/index.wxml
@@ -7,9 +7,5 @@
 <navigator class="work5" url="/pages/work5/index">work5 计算器<text>-></text></navigator>
 <navigator class="work7" url="/pages/work7/index">work7 天气预报<text>-></text></navigator>
 <navigator class="work8" url="/pages/work8/Index/index">work8 机电微官网<text>-></text></navigator>
-<navigator class="work9" url="/pages/work9/index">work9<text>-></text></navigator>
-<!-- <<<<<<< HEAD -->
-<navigator class="work10" url="/pages/work7/button/index">work11 测试<text>-></text></navigator>
-<!-- ======= -->
-<!-- >>>>>>> c92ab0103c7892157f7a6736bcdefdb6616121d0 -->
+<navigator class="work9" url="/pages/work9/index">work9 记账<text>-></text></navigator>
 <navigator class="exitbtn" open-type="exit" target="miniProgram">退出</navigator>
