--- a/miniprogram/pages/work9/index.wxml
+++ b/miniprogram/pages/work9/index.wxml
@@ -1,3 +1,9 @@
+<!-- 底部汇总   -->
+<view class="balance">余额:{{incometotal-paytotal}}</view>  
+<view class="total">
+    <view class="allpay">收入:{{incometotal}}</view>
+    <view class="allin">支出:{{paytotal}}</view>
+</view>
 <view class="content">
     <!-- tab -->
     <view class="nav">
@@ -5,25 +11,25 @@
             <text> 收入</text>
         </view>
         <view class='tab {{isincome?"":"selected"}}' bindtap="click" data-name="pay">
-            <text>支出0</text>
             <text>支出</text>
         </view>
-
         <text></text>
     </view>
     <!-- 收入列表 -->
-    <view wx:if="{{isincome}}">
-        <view class='list income' wx:for="{{incomelist}}" wx:key='this'>{{item}}</view>
+    <view wx:if="{{isincome}}" class="a">
+        <view class='list income' wx:for="{{incomelist}}" wx:key='this'>{{item}}
+            <!-- <view>删除</view> -->
+        </view>
+        <text wx:if="{{incometotal}}" class="del" bindtap="del">-</text>
     </view>
     <!-- 支出列表 -->
-    <view wx:else>
-        <view class="list pay" wx:for="{{paylist}}" wx:key='this'>{{item}}</view>
+    <view wx:else class="a">
+        <view class="list pay" wx:for="{{paylist}}" wx:key='this'>{{item}}
+        </view>
+        <text wx:if="{{paytotal}}" class="del" bindtap="del">-</text>
     </view>
     <button bindtap="add" type="primary">增加</button>
     <input type="text" wx:if="{{isinput}}" value="{{inputval}}" bindconfirm="confirm"
      placeholder='{{isincome?"收入":"支出"}}金额'/>    
 </view>
-<!-- 底部汇总   -->
-<view class="total">
-    收入:{{incometotal}} 支出:{{paytotal}} 余额:{{incometotal-paytotal}}
-</view>
+
