--- a/miniprogram/pages/work9/index.wxss
+++ b/miniprogram/pages/work9/index.wxss
@@ -1,6 +1,9 @@
 .content{
+  position: relative;
+  bottom: 0;
+  width: 90%;
   text-align: center;
-  margin: 50rpx;
+  margin: 20rpx 40rpx;
 }
 .nav{
   display: flex;
@@ -13,20 +16,51 @@
 .selected{
   background-color: red;
 }
-.list{
-  border: 1px solid black;
-  font-size: 50rpx;
+.a{
+  display: flex;
+  flex-direction: row;
 }
-.income{
+.list{
+  flex: 9;
+  border: 1px solid black;
+  /* height: 10rpx; */
+  font-size: 50rpx;
+  margin: 10rpx 0;
+  border-radius: 30rpx;
+  box-shadow: 1px 1px 1px #000;
+}
+/* .income{
   background-color: #369;
 }
 .pay{
   background-color: #963;
-}
+} */
 .total{
-  position: fixed;
-  bottom: 0;
+  display: flex;
+  flex-direction: row;
   width: 100%;
   text-align: center;
   font-size: 50rpx;
+}
+.balance{
+  width: 100%;
+  text-align: center;
+  font-size: 50rpx;
+}
+.del{
+  flex: 1;
+  height: 100%;
+  width: 8%;
+  margin: 10rpx 0;
+  border-radius: 50rpx 50rpx 50rpx 50rpx;
+  font-size: 50rpx;
+  color: #fff;
+  border: 1px solid #000;
+  background-color: red;
+}
+.allpay{
+  flex: 1;
+}
+.allin{
+  flex: 1;
 }
