--- a/miniprogram/pages/work7/index.wxss
+++ b/miniprogram/pages/work7/index.wxss
@@ -51,79 +51,7 @@ page {
   .placeholderClass {
     color: #fff;
   }
-  .chooseBcg {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    position: fixed;
-    z-index: 100;
-    top: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-    font-size: 24rpx;
-    color: #333;
-  }
-  .chooseBcg .top {
-    box-sizing: border-box;
-    padding: 20rpx 20rpx 50rpx;
-    background: rgba(255, 255, 255, 0);
-    color: #fff;
-  }
-  .chooseBcg .bcgs {
-    display: flex;
-    align-items: center;
-    margin-top: 20rpx;
-    overflow: scroll;
-  }
-  .chooseBcg .border {
-    padding: 6rpx;
-    margin-right: 14rpx;
-    border: 1rpx solid rgba(255, 255, 255, 0);
-    transition: .1s ease;
-  }
-  .chooseBcg .border:last-child {
-    margin-right: 0;
-  }
-  .chooseBcg .border.active {
-    border: 1rpx solid #40a7e7;
-    transition: .1s ease;
-  }
-  .chooseBcg .bcgs image {
-    width: 110rpx;
-    height: 190rpx;
-  }
-  .chooseBcg .close {
-    flex: 1;
-    background: rgba(0, 0, 0, 0);
-    padding: 20rpx 0;
-    text-align: center;
-  }
-  .chooseBcg .close image {
-    width: 64rpx;
-    height: 64rpx;
-  }
-  .avatarInfo {
-    display: flex;
-    align-items: center;
-    padding: 0 50rpx;
-  }
-  .avatarInfo .avatar {
-    display: block;
-    overflow: hidden;
-    width: 60rpx;
-    height: 60rpx;
-    border-radius: 50%;
-  }
-  .avatarInfo .name {
-    padding: 0 20rpx;
-    font-size: 30rpx;
-  }
-  .avatarInfo .downArrow {
-    width: 20rpx;
-    height: 20rpx;
-  }
-  .container .content {
+ .content {
     flex: 2;
     transition: .3s ease;
   }
@@ -217,8 +145,7 @@ page {
     margin-bottom: 20rpx;
     overflow-x: scroll;
   }
-  .guide .title,
-.hourly .title {
+  .guide .title{
   position: relative;
   top: 0;
   border-bottom: 1rpx solid rgba(250, 250, 250, .2);
@@ -253,19 +180,6 @@ page {
   width: 40rpx;
   margin-left: 4rpx;
 }
-.hourly {
-  margin-bottom: 20rpx;
-}
-.hourly .hours {
-  padding: 20rpx 10rpx 0;
-  background: rgba(0, 0, 0, .6);
-}
-.hourly .hours .time {
-  font-size: 22rpx;
-  height: 60rpx;
-  line-height: 60rpx;
-  text-align: center;
-}
 .row1{
   position: relative;
   top: 0;
@@ -291,8 +205,6 @@ page {
   border: 1px solid #000;
 }
 .details {
-  /* display: flex;
-  flex-direction: column; */
   justify-content: flex-start;
   align-items: center;
   width: 95%;
@@ -329,14 +241,6 @@ page {
   border-right: 1rpx solid rgba(250, 250, 250, 0.2);
   border-bottom: 1rpx solid rgba(250, 250, 250, 0.2);
   box-sizing: border-box;
-}
-.details .detail:nth-child(4n),
-.hour .detail:nth-child(4n) {
-  border-right: none;
-}
-.details .detail:nth-child(n+9),
-.hour .detail:nth-child(n+9) {
-  border-bottom: none;
 }
 .life{
     position: relative;
