--- a/miniprogram/pages/work7/index.wxss
+++ b/miniprogram/pages/work7/index.wxss
@@ -284,3 +284,17 @@ page {
   border: 1px double #1ae8c8;
   background-color: rgba(0, 0, 0, .6);
 }
+.text{
+  position: relative;
+  margin-top: 20rpx;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-size: 35rpx;
+    text-shadow: 1px 0 0 #8B4513, 0 1px 0 #8B4513, 
+    0 -1px 0 #8B4513, -1px 0 0 #8B4513, 
+    1px 0 1px #8B4513, 0 1px 1px #8B4513, 
+    0 -1px 1px #8B4513, -1px 0 1px #8B4513;
+}
